; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/extr_hns3_ethtool.c_hns3_get_regs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/extr_hns3_ethtool.c_hns3_get_regs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ethtool_regs = type { i32 }
%struct.hnae3_handle = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.hnae3_handle*, i32*, i8*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, %struct.ethtool_regs*, i8*)* @hns3_get_regs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hns3_get_regs(%struct.net_device* %0, %struct.ethtool_regs* %1, i8* %2) #0 {
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca %struct.ethtool_regs*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.hnae3_handle*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store %struct.ethtool_regs* %1, %struct.ethtool_regs** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.net_device*, %struct.net_device** %4, align 8
  %9 = call %struct.hnae3_handle* @hns3_get_handle(%struct.net_device* %8)
  store %struct.hnae3_handle* %9, %struct.hnae3_handle** %7, align 8
  %10 = load %struct.hnae3_handle*, %struct.hnae3_handle** %7, align 8
  %11 = getelementptr inbounds %struct.hnae3_handle, %struct.hnae3_handle* %10, i32 0, i32 0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32 (%struct.hnae3_handle*, i32*, i8*)*, i32 (%struct.hnae3_handle*, i32*, i8*)** %15, align 8
  %17 = icmp ne i32 (%struct.hnae3_handle*, i32*, i8*)* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %3
  br label %32

19:                                               ; preds = %3
  %20 = load %struct.hnae3_handle*, %struct.hnae3_handle** %7, align 8
  %21 = getelementptr inbounds %struct.hnae3_handle, %struct.hnae3_handle* %20, i32 0, i32 0
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32 (%struct.hnae3_handle*, i32*, i8*)*, i32 (%struct.hnae3_handle*, i32*, i8*)** %25, align 8
  %27 = load %struct.hnae3_handle*, %struct.hnae3_handle** %7, align 8
  %28 = load %struct.ethtool_regs*, %struct.ethtool_regs** %5, align 8
  %29 = getelementptr inbounds %struct.ethtool_regs, %struct.ethtool_regs* %28, i32 0, i32 0
  %30 = load i8*, i8** %6, align 8
  %31 = call i32 %26(%struct.hnae3_handle* %27, i32* %29, i8* %30)
  br label %32

32:                                               ; preds = %19, %18
  ret void
}

declare dso_local %struct.hnae3_handle* @hns3_get_handle(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
